// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Provider store={mockStore(defaultState)}><ChatIntegrationPreview/> render() should display auto responder 1`] = `
<ContextProvider
  value={
    {
      "store": {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <ChatIntegrationPreview
    introductionText="intro"
    isOnline={true}
    language="en-US"
    mainColor="#123456"
    mainFontFamily="Inter"
    name="My little chat integration"
    position={
      {
        "alignment": "bottom-right",
        "offsetX": 0,
        "offsetY": 0,
      }
    }
    renderFooter={false}
  >
    <AutoResponder
      autoResponderReply="reply-shortly"
      chatTitle="My little chat integration"
      language="en-US"
      mainColor="#123456"
    />
  </ChatIntegrationPreview>
</ContextProvider>
`;

exports[`<Provider store={mockStore(defaultState)}><ChatIntegrationPreview/> render() should display display the offsets when editing axis x 1`] = `
<ContextProvider
  value={
    {
      "store": {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <ChatIntegrationPreview
    editedPositionAxis="axis-x"
    introductionText="intro"
    isOnline={true}
    language="en-US"
    mainColor="#123456"
    mainFontFamily="Inter"
    name="My little chat integration"
    position={
      {
        "alignment": "bottom-right",
        "offsetX": 1000,
        "offsetY": 0,
      }
    }
    renderFooter={false}
  >
    <MessageContent
      agentMessages={
        [
          {
            "attachments": [],
            "content": "test",
            "isHtml": false,
          },
        ]
      }
      conversationColor="#456789"
      currentUser={
        Immutable.Map {
          "name": "Charles",
        }
      }
      customerInitialMessages={[]}
    />
  </ChatIntegrationPreview>
</ContextProvider>
`;

exports[`<Provider store={mockStore(defaultState)}><ChatIntegrationPreview/> render() should display display the offsets when editing axis y 1`] = `
<ContextProvider
  value={
    {
      "store": {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <ChatIntegrationPreview
    editedPositionAxis="axis-y"
    introductionText="intro"
    isOnline={true}
    language="en-US"
    mainColor="#123456"
    mainFontFamily="Inter"
    name="My little chat integration"
    position={
      {
        "alignment": "bottom-right",
        "offsetX": 0,
        "offsetY": 0,
      }
    }
    renderFooter={false}
  >
    <MessageContent
      agentMessages={
        [
          {
            "attachments": [],
            "content": "test",
            "isHtml": false,
          },
        ]
      }
      conversationColor="#456789"
      currentUser={
        Immutable.Map {
          "name": "Charles",
        }
      }
      customerInitialMessages={[]}
    />
  </ChatIntegrationPreview>
</ContextProvider>
`;

exports[`<Provider store={mockStore(defaultState)}><ChatIntegrationPreview/> render() should display optional email capture 1`] = `
<ContextProvider
  value={
    {
      "store": {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <ChatIntegrationPreview
    introductionText="intro"
    isOnline={true}
    language="en-US"
    mainColor="#123456"
    mainFontFamily="Inter"
    name="My little chat integration"
    position={
      {
        "alignment": "bottom-right",
        "offsetX": 0,
        "offsetY": 0,
      }
    }
  >
    <OptionalEmailCapture
      chatTitle="My little chat integration"
      language="en-US"
      mainColor="#123456"
    />
  </ChatIntegrationPreview>
</ContextProvider>
`;

exports[`<Provider store={mockStore(defaultState)}><ChatIntegrationPreview/> render() should display required email capture 1`] = `
<ContextProvider
  value={
    {
      "store": {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <ChatIntegrationPreview
    introductionText="intro"
    isOnline={true}
    language="en-US"
    mainColor="#123456"
    mainFontFamily="Inter"
    name="My little chat integration"
    position={
      {
        "alignment": "bottom-right",
        "offsetX": 0,
        "offsetY": 0,
      }
    }
    renderFooter={false}
  >
    <RequiredEmailCapture
      language="en-US"
      mainColor="#123456"
      name="My little chat integration"
    />
  </ChatIntegrationPreview>
</ContextProvider>
`;

exports[`<Provider store={mockStore(defaultState)}><ChatIntegrationPreview/> render() should display the avatar team picture in the header because the URL is set and the option is enabled 1`] = `
<ContextProvider
  value={
    {
      "store": {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <ChatIntegrationPreview
    avatarTeamPictureUrl="https://gorgias.io/avatar.png"
    avatarType="team-picture"
    introductionText="intro"
    isOnline={true}
    language="en-US"
    mainColor="#123456"
    mainFontFamily="Inter"
    name="My little chat integration"
    position={
      {
        "alignment": "bottom-right",
        "offsetX": 0,
        "offsetY": 0,
      }
    }
  >
    <MessageContent
      agentMessages={
        [
          {
            "attachments": [],
            "content": "test",
            "isHtml": false,
          },
        ]
      }
      conversationColor="#456789"
      currentUser={
        Immutable.Map {
          "name": "Charles",
        }
      }
      customerInitialMessages={[]}
    />
  </ChatIntegrationPreview>
</ContextProvider>
`;

exports[`<Provider store={mockStore(defaultState)}><ChatIntegrationPreview/> render() should display the offline status because chat is offline 1`] = `
<ContextProvider
  value={
    {
      "store": {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <ChatIntegrationPreview
    introductionText="intro"
    isOnline={false}
    language="en-US"
    mainColor="#123456"
    mainFontFamily="Inter"
    name="My little chat integration"
    position={
      {
        "alignment": "bottom-right",
        "offsetX": 0,
        "offsetY": 0,
      }
    }
  >
    <MessageContent
      agentMessages={
        [
          {
            "attachments": [],
            "content": "test",
            "isHtml": false,
          },
        ]
      }
      conversationColor="#456789"
      currentUser={
        Immutable.Map {
          "name": "Charles",
        }
      }
      customerInitialMessages={[]}
    />
  </ChatIntegrationPreview>
</ContextProvider>
`;

exports[`<Provider store={mockStore(defaultState)}><ChatIntegrationPreview/> render() should display the online status because chat is online 1`] = `
<ContextProvider
  value={
    {
      "store": {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <ChatIntegrationPreview
    introductionText="intro"
    isOnline={true}
    language="en-US"
    mainColor="#123456"
    mainFontFamily="Inter"
    name="My little chat integration"
    position={
      {
        "alignment": "bottom-right",
        "offsetX": 0,
        "offsetY": 0,
      }
    }
  >
    <MessageContent
      agentMessages={
        [
          {
            "attachments": [],
            "content": "test",
            "isHtml": false,
          },
        ]
      }
      conversationColor="#456789"
      currentUser={
        Immutable.Map {
          "name": "Charles",
        }
      }
      customerInitialMessages={[]}
    />
  </ChatIntegrationPreview>
</ContextProvider>
`;

exports[`<Provider store={mockStore(defaultState)}><ChatIntegrationPreview/> render() should display the sliders when editing the position 1`] = `
<ContextProvider
  value={
    {
      "store": {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <ChatIntegrationPreview
    introductionText="intro"
    isOnline={true}
    language="en-US"
    mainColor="#123456"
    mainFontFamily="Inter"
    name="My little chat integration"
    position={
      {
        "alignment": "bottom-right",
        "offsetX": 0,
        "offsetY": 0,
      }
    }
  >
    <MessageContent
      agentMessages={
        [
          {
            "attachments": [],
            "content": "test",
            "isHtml": false,
          },
        ]
      }
      conversationColor="#456789"
      currentUser={
        Immutable.Map {
          "name": "Charles",
        }
      }
      customerInitialMessages={[]}
    />
  </ChatIntegrationPreview>
</ContextProvider>
`;

exports[`<Provider store={mockStore(defaultState)}><ChatIntegrationPreview/> render() should display typical response time for reply-in-day 1`] = `
<ContextProvider
  value={
    {
      "store": {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <ChatIntegrationPreview
    autoResponderEnabled={true}
    autoResponderReply="reply-in-day"
    editedPositionAxis="axis-y"
    introductionText="intro"
    isOnline={true}
    language="en-US"
    mainColor="#123456"
    mainFontFamily="Inter"
    name="My little chat integration"
    position={
      {
        "alignment": "bottom-right",
        "offsetX": 0,
        "offsetY": 0,
      }
    }
    renderFooter={false}
  >
    <MessageContent
      agentMessages={
        [
          {
            "attachments": [],
            "content": "test",
            "isHtml": false,
          },
        ]
      }
      conversationColor="#456789"
      currentUser={
        Immutable.Map {
          "name": "Charles",
        }
      }
      customerInitialMessages={[]}
    />
  </ChatIntegrationPreview>
</ContextProvider>
`;

exports[`<Provider store={mockStore(defaultState)}><ChatIntegrationPreview/> render() should display typical response time for reply-in-hours 1`] = `
<ContextProvider
  value={
    {
      "store": {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <ChatIntegrationPreview
    autoResponderEnabled={true}
    autoResponderReply="reply-in-hours"
    editedPositionAxis="axis-y"
    introductionText="intro"
    isOnline={true}
    language="en-US"
    mainColor="#123456"
    mainFontFamily="Inter"
    name="My little chat integration"
    position={
      {
        "alignment": "bottom-right",
        "offsetX": 0,
        "offsetY": 0,
      }
    }
    renderFooter={false}
  >
    <MessageContent
      agentMessages={
        [
          {
            "attachments": [],
            "content": "test",
            "isHtml": false,
          },
        ]
      }
      conversationColor="#456789"
      currentUser={
        Immutable.Map {
          "name": "Charles",
        }
      }
      customerInitialMessages={[]}
    />
  </ChatIntegrationPreview>
</ContextProvider>
`;

exports[`<Provider store={mockStore(defaultState)}><ChatIntegrationPreview/> render() should display typical response time for reply-in-minutes 1`] = `
<ContextProvider
  value={
    {
      "store": {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <ChatIntegrationPreview
    autoResponderEnabled={true}
    autoResponderReply="reply-in-minutes"
    editedPositionAxis="axis-y"
    introductionText="intro"
    isOnline={true}
    language="en-US"
    mainColor="#123456"
    mainFontFamily="Inter"
    name="My little chat integration"
    position={
      {
        "alignment": "bottom-right",
        "offsetX": 0,
        "offsetY": 0,
      }
    }
    renderFooter={false}
  >
    <MessageContent
      agentMessages={
        [
          {
            "attachments": [],
            "content": "test",
            "isHtml": false,
          },
        ]
      }
      conversationColor="#456789"
      currentUser={
        Immutable.Map {
          "name": "Charles",
        }
      }
      customerInitialMessages={[]}
    />
  </ChatIntegrationPreview>
</ContextProvider>
`;

exports[`<Provider store={mockStore(defaultState)}><ChatIntegrationPreview/> render() should display typical response time for reply-shortly 1`] = `
<ContextProvider
  value={
    {
      "store": {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <ChatIntegrationPreview
    autoResponderEnabled={true}
    autoResponderReply="reply-shortly"
    editedPositionAxis="axis-y"
    introductionText="intro"
    isOnline={true}
    language="en-US"
    mainColor="#123456"
    mainFontFamily="Inter"
    name="My little chat integration"
    position={
      {
        "alignment": "bottom-right",
        "offsetX": 0,
        "offsetY": 0,
      }
    }
    renderFooter={false}
  >
    <MessageContent
      agentMessages={
        [
          {
            "attachments": [],
            "content": "test",
            "isHtml": false,
          },
        ]
      }
      conversationColor="#456789"
      currentUser={
        Immutable.Map {
          "name": "Charles",
        }
      }
      customerInitialMessages={[]}
    />
  </ChatIntegrationPreview>
</ContextProvider>
`;

exports[`<Provider store={mockStore(defaultState)}><ChatIntegrationPreview/> render() should not display button if hideButton provided 1`] = `
<ContextProvider
  value={
    {
      "store": {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <ChatIntegrationPreview
    hideButton={true}
    introductionText="intro"
    isOnline={true}
    language="en-US"
    mainColor="#123456"
    mainFontFamily="Inter"
    name="My little chat integration"
    position={
      {
        "alignment": "bottom-right",
        "offsetX": 0,
        "offsetY": 0,
      }
    }
  >
    <MessageContent
      agentMessages={
        [
          {
            "attachments": [],
            "content": "test",
            "isHtml": false,
          },
        ]
      }
      conversationColor="#456789"
      currentUser={
        Immutable.Map {
          "name": "Charles",
        }
      }
      customerInitialMessages={[]}
    />
  </ChatIntegrationPreview>
</ContextProvider>
`;
